Implementação das autorizações
