# src/swagger.json
@@ -272,6 +272,48 @@
           }
         }
       }
+    },
+    "/login": {
+      "post": {
+        "summary": "Autenticação no sistema",
+        "description": "Rota para autenticação no sistema",
+        "tags": [
+          "Login"
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/Authenticate"
+              },
+              "examples": {
+                "company": {
+                  "value": {
+                    "email": "teste@empresa.com.br",
+                    "password": "teste@123"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Authenticate"
+                }
+              }
+            }
+          }
+        }
+      }
     }
   },
   "components": {
@@ -324,6 +366,14 @@
           },
           "id": {
             "type": "integer"
+          }
+        }
+      },
+      "Authenticate": {
+        "type": "object",
+        "properties": {
+          "token": {
+            "type": "string"
           }
         }
       }
